--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -163,7 +163,7 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="form-group">
-                     <input type="text" class="form-control" value="<%=name%>" id="name" name="name" placeholder="Name" required data-error="Please enter your name">
+                     <input type="text" class="form-control" id="name" name="name" placeholder="Name" required data-error="Please enter your name">
                      <div class="help-block with-errors"></div>
                   </div>
                </div>
